# CHTL_FINAL

./: .gitignore  AGENTS.md  ANALYSIS.md  AttributeArithmeticTest_executable  CHANGELOG.md  CHTL.md  CHTL_ANALYSIS.md  CHTL_Analysis.md  CHTL_Architecture.md  CHTL_Compiler  CHTL_Implementation_Summary.md  CHTL_PROJECT_COMPLETE_SUMMARY.md  CHTL_PROJECT_DEVELOPMENT_SUMMARY.md  CHTL_PROJECT_FINAL_SUMMARY.md  CHTL_Project_Summary.md  CJMOD_API_PROGRESS.md  CJMOD_API_SUMMARY.md  CMakeCache.txt  CMakeLists.txt  CMakeLists_simple.txt  CODE_MERGER_PROGRESS.md  COMPILATION_ERROR_SUMMARY.md  COMPILATION_FIXES.md  COMPLETE_CHTL_PROJECT_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETION_SUMMARY.md  CONFIGURATION_SYSTEM_PROGRESS.md  CONTRIBUTING.md  CTestTestfile.cmake  Cargo.toml  DELIVERY_CHECKLIST.md  DOCUMENTATION.md  ElementTemplateTest_executable  FEATURE_TEST_PACKAGE_SUMMARY.md  FINAL_COMPILATION_MONITOR_SUMMARY.md  FINAL_SUMMARY.md  FINAL_VSCODE_EXTENSION_SUMMARY.md  FullPipelineTest_executable  IMPORT_SYSTEM_PROGRESS.md  LATEST_DEVELOPMENT_SUMMARY.md  (+436 more)
CHTL/: .gitignore  AstPrinter.cpp  AstPrinter.h  AstPrinter.hpp  CHTLCompiler.cpp  CHTLCompiler.h  CHTLContext.cpp  CHTLContext.h  CHTLContext.hpp  CHTLGenerator.cpp  CHTLGenerator.h  CHTLLexer.cpp  CHTLLexer.h  CHTLParser.cpp  CHTLParser.h  CMakeLists.txt  CMakeLists_simple.txt  CMakeLists_test.txt  CodeMerger.cpp  CodeMerger.h  CompilationResult.h  Compiler.cpp  Compiler.hpp  CompilerDispatcher.cpp  CompilerDispatcher.h  DETAILED_IMPLEMENTATION_STATUS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_PROJECT_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS.md  Loader.cpp  Loader.h  NEW_SYNTAX_FEATURES.md  NamespaceData.h  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  README_WINDOWS.md  (+146 more)
CHTL/ASTProcessors/: StyleEvaluator.cpp  StyleEvaluator.h  StyleProcessor.cpp  StyleProcessor.h  TemplateProcessor.cpp  TemplateProcessor.h
CHTL/CHTL/: CHTLCore.cpp  CHTLCore.hpp  CMakeLists.txt
CHTL/CHTL JS/: CHTLJSCompiler.cpp  CHTLJSCompiler.h  CMakeLists.txt
CHTL/CHTLAnalyzer/: Analyzer.cpp  Analyzer.h  CHTLSemanticAnalyzer.cpp  CHTLSemanticAnalyzer.h
CHTL/CHTLCompiler/: CHTLCompiler.cpp  CHTLCompiler.h  CMakeLists.txt  CompilationContext.cpp  CompilationContext.h
CHTL/CHTLContext/: CHTLContext.cpp  CHTLContext.h  CHTLContext.hpp  CHTLEnvironment.h  Configuration.cpp  Configuration.h  Context.cpp  Context.h  TemplateData.h  context.py
CHTL/CHTLEvaluator/: Evaluator.cpp  Evaluator.h  Evaluator.hpp  ExprEvaluator.cpp  ExprEvaluator.h
CHTL/CHTLExpression/: BinaryOpExprNode.h  ConditionalExprNode.h  ExprNode.cpp  ExprNode.h  ExpressionParser.cpp  ExpressionParser.h  LiteralExprNode.h  UnaryOpExprNode.h
CHTL/CHTLExpressionEvaluator/: ExpressionEvaluator.cpp  ExpressionEvaluator.h
CHTL/CHTLExpressionParser/: ExpressionParser.cpp  ExpressionParser.h
CHTL/CHTLGenerator/: CHTLGenerator.cpp  CHTLGenerator.h  CHTLGeneratorComplete.cpp  (+15 more)
CHTL_JS/: CHTLJSProcessor.cpp  CHTLJSProcessor.h  CMakeLists.txt
CompilerDispatcher/: CMakeLists.txt  CompilerDispatcher.cpp  CompilerDispatcher.h  ImportVisitor.cpp  ImportVisitor.h  dispatcher.go  dispatcher.py  main.cpp
Test/: AttributeTest.cpp  CHTLJSGeneratorTest.cpp  CHTLJSLexerTest.cpp  CHTLJSParserTest.cpp  CMakeLists.txt  CompilerTest.cpp  ElementTemplateTest.cpp  ErrorTest.cpp  GeneratorTest.cpp  LexerTest.cpp  ParserTest.cpp  ScannerTest.cpp  StyleTest.cpp  TemplateTest.cpp  Test.h  TestMain.cpp  alias_imported.chtl  alias_output.html  alias_test.chtl  arithmetic.chtl  basic.chtl  basic_elements.chtl  chtl_js_syntax.chtl  chtl_js_test.chtl  circ1.chtl  circ2.chtl  circ_output.html  compiler_test  config_test.chtl  constraints_test.chtl  custom.chtl  custom_features.chtl  customs.chtl  debug_lexer.go  debug_script.chtl  element_template_test.chtl  example.chtl  expression_test.chtl  expression_test_runner  expressions.chtl  (+77 more)
Util/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Fragment.h  StringUtil.cpp  StringUtil.h
chtl/: CMakeLists.txt  Cargo.toml  IMPLEMENTATION_STATUS.md  PROJECT_STATUS.md  README.md  build.sh  components.chtl  core  debug_ast  debug_ast.cpp  debug_attr  debug_attr.cpp  debug_chtl_parser  debug_chtl_parser.cpp  debug_html  debug_html.cpp  debug_output.html  debug_parser  debug_parser.cpp  debug_simple  debug_simple.cpp  debug_style  debug_style.cpp  debug_test  debug_test.cpp  debug_test2  debug_test3  output.html  output2.html  output_advanced.css  output_advanced.html  output_simple.css  output_simple.html  sample.chtl  simple_parser  simple_parser.cpp  test.chtl  test_chtl_js  test_chtl_js.cpp  test_cmod_cjmod_system  (+19 more)
src/: CHTLContext.cpp  CHTLGenerator.cpp  CHTLLexer.cpp  CHTLParser.cpp  CMakeLists.txt  CodeMerger.java  ConfigurationManager.cpp  ImportManager.cpp  ModuleManager.cpp  NamespaceManager.cpp  Token.cpp  ast.rs  ast_enum.rs  chtl_cli.cpp  chtl_compiler.cpp  chtl_js_compiler.cpp  chtl_js_processor.rs  cli.rs  cli_main.cpp  cli_old.rs  enhanced_template_compiler.cpp  error.rs  error_handler.cpp  generator.rs  import_namespace_processor.rs  improved_chtl_compiler.cpp  lexer.rs  lib.rs  main.cpp  main.rs  module_processor.rs  module_system_compiler.cpp  parser.rs  parser_simple.rs  simple_chtl_compiler.cpp  style_processor.rs  template_processor.rs  test_main.cpp  unified_chtl_compiler.cpp  utils.rs  (+1 more)
test/: CHTLLexerTest.cpp  CHTLParserTest.cpp  CMakeLists.txt  README.md  UnifiedScannerTest.cpp  chtljs.chtl  cjmodapi.chtl  components.chtl  comprehensive-syntax.chtl  config.chtl  constraints.chtl  custom.chtl  external-script.js  external-styles.css  header.html  import.chtl  lexer_test.chtl  module.cjmod  module.cmod  origin.chtl  script.js  simple.chtl  spa-example.chtl  styles.css  template.chtl  test_basic_template_style.chtl  test_basic_template_style_expected.html  test_chtl_js_basic.chtljs  test_chtl_js_basic_expected.js  test_comprehensive.cpp  test_generator.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_scanner.cpp  test_suite.cpp  traditional-page.chtl  utils.chtl  vscode-extension.chtl
(+2363 files in other folders)
